@@ -1,0 +1,9 @@
+<BR><HR size=1 noshade>
+
+#ifdef TITLE
+#ifdef SCHEMA_LONGCOMMENT
+<H2 ALIGN="CENTER"><b>Entry for ##TITLE##</b> - <i> ##SCHEMA_LONGCOMMENT##</i></H2>
+#else
+<H1 ALIGN="CENTER">Entry for ##TITLE##</h1>
+#endif
+#endif
