@@ -10,6 +10,7 @@ HEAD    (2004-04-08)
 	If you add more then one schema to your gedafe application, 
 	the top of the Entry screen shows links into the other schemas 
 	instead of table links. So you only need one cgi script.
+	Addedd example/templates/header3.html
   *	persistency cleanup
 	Make the code faster/work/work by using the fact that $g is 
 	only loaded once, if you use the "speedy" perl interpreter
